added more styling

--- a/SnakeGame/style.css
+++ b/SnakeGame/style.css
@@ -1,9 +1,8 @@
 body {
   margin-top: 30px;
-  background-color: #185361;
-  color: #B19CBE;
-  font-family: 'Indie Flower', cursive;
-
+  background-color: #2E2D4D;
+  color: #588939;
+  font-family: 'Patrick Hand', cursive;
 }
 .container {
   padding: 0;
