--- a/ImageSlider/style.css
+++ b/ImageSlider/style.css
@@ -47,6 +47,7 @@ body {
   position: absolute;
   z-index: 999;
   -webkit-clip-path: polygon(0% 100%, 100% 100%, 100% 80%, 93% 85%, 8% 95%, 15% 6%, 89% 22%, 93% 85%, 100% 80%, 100% 0%, 0% 0%, 0% 100%);
+  transition: all 1s;
 }
 
 
