--- a/ImageSlider/style.css
+++ b/ImageSlider/style.css
@@ -2,6 +2,9 @@ body {
   margin: 0px;
   padding: 0px;
 }
+.wrap {
+  position: relative;
+}
 .slider {
   position: relative;
   width: 100%;
@@ -65,7 +68,19 @@ body {
   -webkit-clip-path: polygon(0% 100%, 100% 100%, 100% 80%, 93% 85%, 8% 95%, 15% 6%, 89% 22%, 93% 85%, 100% 80%, 100% 0%, 0% 0%, 0% 100%);
   transition: all 1s;
 }
-
-
-
+.arrow {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  margin-top: -50px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+#arrow-left{
+  border-width: 30px 40px 30px 0;
+  border-color: transparent #ffffff transparent transparent;
+  left: 0;
+  margin-left: 30px;
+}
 
